# Machine-Accelerated-Investigation-CBS-Workshop

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  PRD-workshop-skills.md  README.md  kilo.json  pyproject.toml
.kilo/skills/data-analysis-journalism/: SKILL.md  evals.json
.kilo/skills/data-analysis-journalism/references/: eda-checklist.md
.kilo/skills/data-cleaning-dutch/: SKILL.md  evals.json
.kilo/skills/data-cleaning-dutch/references/: dutch-data-quirks.md
exercises/01-lokaal-woningdruk/: 01-lokaal-woningdruk-opdracht.md
exercises/02-api-vrij/: 02-api-vrij-opdracht.md
exercises/02-team-expeditie/: 02-team-expeditie-opdracht.md  BRAINSTORM_PROMPT_TEMPLATE.md  PROMPT_TEMPLATE.md
