[project]
name = "cbs-workshop"
version = "0.1.0"
description = "Machine-accelerated investigation with Dutch CBS open data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.1",
    "requests>=2.31",
    "openpyxl>=3.1",
]

[dependency-groups]
viz = [
    "altair>=5.3",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "vl-convert-python>=1.6",
]
geo = [
    "geopandas>=0.14",
    "folium>=0.15",
]
dev = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "pytest>=8.0",
    "requests-mock>=1.12",
]

[tool.pytest.ini_options]
markers = [
    "integration: live network tests against CBS OData and PDOK APIs (run with -m integration)",
    "e2e: end-to-end pipeline tests requiring network access (run with -m e2e)",
]
filterwarnings = ["ignore::DeprecationWarning"]
